Changelog
=========


1.2.9
-----


1.2.8
-----

* Issue #498 PDF Export anpassen
  https://extranet.4teamwork.ch/intranet/10-interne-projekte/4teamwork-egov/tracker-4teamwork-egov/498/
  added task-list
  [14.06.2011, jinfanger]

1.2.7
-----
* Removed PDB - ARGHHH
  [27.04.2011, mathias.leimgruber]

1.2.6
-----


1.2.5
-----

* Make start and end date required. 
  [31.03.2011, mathias.leimgruber]

* Auto-fill end date with start date infos. 
  [31.03.2011, mathias.leimgruber]


1.2.4
-----

* Issue #46 PDF Fuer Sitzungstraktanden funktioniert nicht
  https://extranet.4teamwork.ch/support/0280-Support-RIZ/tracker/46/
  Fixed list with string and unicode => unicode-error
  [11.04.2011, jinfanger]

1.2.3
-----

* Improve file view (don't show related items twice / remove default
  description)
  [01.02.2011, mathias.leimgruber]

* Added missing normalizeString definition. 
  [28.01.2011, mathias.leimgruber]

1.2.2
-----


1.2.1
-----

* I'm no able to fix this F*** doctsring!! use --- instead of ====
  and it fails^2. Title level is also inconsistent, but if I do it the right
  way it will fail too!!!

* Only show head_of_meeting if meeting typ ist "meeting"
  [07.12.2010, mathias.leimgruber]

* Removed old poodle stuff, the date will be shown correctly now.
  [02.12.2010, mathias.leimgruber]


1.2
---

    
1.1
---

* Issue #440 Buch PDF-Export implementieren
  https://extranet.4teamwork.ch/intranet/10-interne-projekte/4teamwork-egov/tracker-4teamwork-egov/440
  [12.11.2010, jinfanger]

* Issue #440 Buch PDF-Export implementieren
  https://extranet.4teamwork.ch/intranet/10-interne-projekte/4teamwork-egov/tracker-4teamwork-egov/440
  [05.11.2010, jinfanger]

1.0
---

* Removed AnnotationStorage from some fields
  [08.09.2010, jbaumann]

* Made meeting type a vocabulary, made js more generic
  [03.09.2010, jbaumann]

* Do not use ATFieldProperties but use AttributeStorage
  [03.09.2010, jbaumann]

* Changed way of registering catalog indexes according to devwiki